<resources>
    <string name="app_name">Hangman</string>
    <string name="edit_message">Enter a letter</string>
    <string name="button_send">Send</string>
    <string name="Misses">Misses: </string>
    <string name="missed_words"> </string>
    <string name="guessesLeft_Label_1">Guesses left: </string>
    <string name="guessesLeft_1"> Test </string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_display_message">Hangman Singleplayer</string>
</resources>
